Fixed report for latex generation

--- a/TP3/NTRU_Encrypt.ipynb
+++ b/TP3/NTRU_Encrypt.ipynb
@@ -14,9 +14,11 @@
     "## Sampler\n",
     "\n",
     "A classe `Sampler` apresentada permite gerar polinómios ternários (**i.e.** com coeficientes -1,0,1) pseudo-aleatórios. Esta classe recorre a uma `seed` que determina a sequência obtida quando os parâmetros de entrada\n",
-    "- `N` : ordem do polinómio\n",
-    "- `d1` : número de coeficientes **1**'s\n",
-    "- `d2` : número de coeficientes **-1**'s\n",
+    "\n",
+    "* `N` : ordem do polinómio\n",
+    "* `d1` : número de coeficientes **1**'s\n",
+    "* `d2` : número de coeficientes **-1**'s\n",
+    "\n",
     "permanecem constantes.\n",
     "\n",
     "A especificação deste `Sampler`(gerador) para gerar um polinómio binário, presente \"**EESS #1: Implementation Aspects of NTRUEncrypt and pqNTRUSign**\", apresenta-se de seguida:\n",
@@ -102,16 +104,17 @@
     "## Algoritmo de Cifragem\n",
     "\n",
     "**INPUT**: Chave pública h, mensagem msg de comprimento mlen, um conjunto de parâmetros $Param$ e a $seed$.\n",
+    "\n",
     "1. $m = Pad(msg, seed)$\n",
-    "1. $rseed = Hash(m|h)$\n",
-    "1. Instanciar $Sampler$ com $T$ e com $rseed$;\n",
-    "1. $r ← Sampler$\n",
-    "1. $t = r ∗ h$\n",
-    "1. $tseed = Hash(t)$\n",
-    "1. Instanciar $Sampler$ com $T$ e com $tseed$;\n",
-    "1. $m_{mask} ← Sampler$\n",
-    "1. $m' = m − m_{mask}(mod p)$\n",
-    "1. $c = t + m$\n",
+    "2. $rseed = Hash(m|h)$\n",
+    "3. Instanciar $Sampler$ com $T$ e com $rseed$;\n",
+    "4. $r ← Sampler$\n",
+    "5. $t = r ∗ h$\n",
+    "6. $tseed = Hash(t)$\n",
+    "7. Instanciar $Sampler$ com $T$ e com $tseed$;\n",
+    "8. $m_{mask} ← Sampler$\n",
+    "9. $m' = m − m_{mask}(mod p)$\n",
+    "10. $c = t + m$\n",
     "\n",
     "**OUTPUT**: Criptograma **c**\n",
     "\n",
@@ -126,19 +129,20 @@
     "## Algorithm de Decifragem\n",
     "\n",
     "**INPUT**: Chave secreta $f$, chave pública $h$, criptograma $c$, e o conjunto de parâmetros $Param$.\n",
+    "\n",
     "1. $m' = f ∗ c (mod p)$\n",
-    "1. $t = c − m$\n",
-    "1. $tseed = Hash(t)$\n",
-    "1. Instanciar $Sampler$ com $T$ e com $tseed$;\n",
-    "1. $m_{mask} = Sampler$\n",
-    "1. $m = m' + m_{mask} (mod p)$\n",
-    "1. $rseed = Hash(m|h)$\n",
-    "1. Instanciar $Sampler$ com $T$ e com $rseed$;\n",
-    "1. $r ← Sampler$\n",
-    "1. $msg, mlen = Extract(m)$\n",
-    "1. se $p · r ∗ h = t$ então:\n",
+    "2. $t = c − m$\n",
+    "3. $tseed = Hash(t)$\n",
+    "4. Instanciar $Sampler$ com $T$ e com $tseed$;\n",
+    "5. $m_{mask} = Sampler$\n",
+    "6. $m = m' + m_{mask} (mod p)$\n",
+    "7. $rseed = Hash(m|h)$\n",
+    "8. Instanciar $Sampler$ com $T$ e com $rseed$;\n",
+    "9. $r ← Sampler$\n",
+    "10. $msg, mlen = Extract(m)$\n",
+    "11. se $p · r ∗ h = t$ então:\n",
     "    1. $result = msg, mlen$\n",
-    "1. senão:\n",
+    "12. senão:\n",
     "    1. $result = ⊥ $\n",
     "\n",
     "**OUTPUT**: $result$\n",
